# llm-evaluator

./: .gitignore  .markdownlint.json  CODE_REVIEW_SUMMARY.md  README.md  main.py  pyproject.toml  pyrightconfig.json
.github/: copilot-instructions.md
notebooks/: example.ipynb  llm-compare.ipynb
results/: evaluation_report_20251030_105826.md  evaluation_report_20251030_183456.md  evaluation_report_20251030_200930.md
