[project]
name = "llm-evaluator"
version = "0.1.0"
description = "LLM evaluation toolkit using OpenRouter API for model comparison and benchmarking"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.30.1",
    "jupyter>=1.1.1",
    "pandas>=2.2.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "playwright>=1.40.0",
    "openai>=1.0.0",
]

[tool.ruff]
# Set the maximum line length to 120 characters (more lenient for notebooks with docstrings)
line-length = 120

# Assume Python 3.13
target-version = "py313"

# Enable auto-fixing where possible
fix = true

[tool.ruff.lint]
# Enable these rule sets
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort (import sorting)
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]

# Ignore specific rules if needed
ignore = [
    "W293",  # Blank line contains whitespace (common in notebooks)
]

# Notebook-specific settings
[tool.ruff.lint.per-file-ignores]
"*.ipynb" = [
    "I001",  # Import block is unsorted/unformatted (notebooks have non-linear execution)
    "E501",  # Line too long (some docstrings are hard to break)
]

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"

# Indent with spaces
indent-style = "space"

# Use `\n` line endings for all files
line-ending = "auto"
